--- a/package.json
+++ b/package.json
@@ -3,8 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@babel/plugin-proposal-class-properties": "7.18.6",
+    "@babel/plugin-proposal-decorators": "7.21.0",
     "@emotion/react": "11.10.6",
     "@emotion/styled": "11.10.6",
+    "@mui/icons-material": "5.11.11",
     "@mui/material": "5.11.10",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
@@ -12,8 +15,11 @@
     "axios": "^1.3.2",
     "dotenv": "^16.0.3",
     "jest": "29.4.3",
+    "mobx": "6.8.0",
+    "mobx-react": "7.6.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "6.8.2",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
