--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "jest": "29.4.3",
     "mobx": "6.8.0",
     "mobx-react": "7.6.0",
+    "node-sass": "8.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "6.8.2",
